# automate-dv-demo

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml  requirements.txt
macros/dbt_overrides/: _dbt_overrides__macros.yml
models/: schema.yml
models/raw_stage/: raw_inventory.sql  raw_orders.sql  raw_transactions.sql
models/raw_vault/hubs/: _hubs_schema.yml  hub_customer.sql  hub_lineitem.sql  hub_nation.sql  hub_order.sql  hub_part.sql  hub_region.sql  hub_supplier.sql
models/raw_vault/links/: _links_schema.yml  link_customer_nation.sql  link_customer_order.sql  link_inventory.sql  link_inventory_allocation.sql  link_nation_region.sql  link_order_lineitem.sql  link_supplier_nation.sql
models/raw_vault/sats/: _sats_schema.yml  sat_inv_inventory_details.sql  sat_inv_part_details.sql  sat_inv_supp_nation_details.sql  sat_inv_supp_region_details.sql  sat_inv_supplier_details.sql  sat_order_cust_nation_details.sql  sat_order_cust_region_details.sql  sat_order_customer_details.sql  sat_order_lineitem_details.sql  sat_order_order_details.sql
models/raw_vault/t_links/: _t_link_schema.yml  t_link_transactions.sql
models/stage/: _stage_schema.yml  v_stg_inventory.sql  v_stg_orders.sql  v_stg_transactions.sql
