[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "automate-dv-demo"
dynamic = ["version"]
description = "This is an example dbt project demonstrating the creation of a Data Vault 2.0 Data Warehouse in Databricks based on the Databricks TPC-H sample dataset."
readme = "README.md"
authors = [{ name = "Alisdair Smyth", email = "alisdair.smyth@gmail.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["dbt", "databricks", "automate-dv", "sql"]
dependencies = [
    "dbt-databricks>=1.10.0, <1.11.0",
]

[project.urls]
homepage = "https://github.com/alisdairjsmyth/automate-dv-demo"
issues = "https://github.com/alisdairjsmyth/automate-dv-demo/issues"
repository = "https://github.com/alisdairjsmyth/automate-dv-demo"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "shandy-sqlfmt[jinjafmt]",
    "sqlfluff",
    "sqlfluff-templater-dbt",
]

# --- SQLFluff Configuration ---
# Per dbtonic linting rules - https://docs.getdbt.com/docs/cloud/dbt-cloud-ide/lint-format#configure-dbtonic-linting-rules
# Updates for sqlfmt compatibility - https://sqlfmt.com/docs/integrations/sqlfluffhttps://sqlfmt.com/docs/integrations/sqlfluff
[tool.sqlfluff.core]
templater = "dbt"
dialect = "databricks"
runaway_limit = 10
max_line_length = 88
indent_unit = "space"
# Included to be compatible with sqlfmt
exclude_rules = [
    "layout.indent",
    "layout.cte_bracket",
    "layout.keyword_newline",
    "layout.select_targets",
    "layout.spacing"
]

[tool.sqlfluff.templater.dbt]
profiles_dir = "."

[tool.sqlfluff.indentation]
tab_space_size = 4

[tool.sqlfluff.layout.type.comma]
spacing_before = "touch"
line_position = "trailing"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.aliasing.table]
aliasing = "explicit"

[tool.sqlfluff.rules.aliasing.column]
aliasing = "explicit"

[tool.sqlfluff.rules.aliasing.length]
min_alias_length = 4

[tool.sqlfluff.rules.aliasing.expression]
allow_scalar = false

[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.ambiguous.column_references]
group_by_and_order_by_style = "implicit"

[tool.sqlfluff.rules.convention.not_equal]
# Require != over <> for not equal
preferred_not_equal_style = "c_style"

[tool.sqlfluff.rules.convention.select_trailing_comma]
select_clause_trailing_comma = "require"

# Included to be compatible with sqlfmt
[tool.sqlfluff.rules.convention.terminator]
multiline_newline = true

[tool.sqlfluff.rules.convention.blocked_words]
# Comma separated list of blocked words that should not be used
blocked_words = "concat"

[tool.sqlfluff.rules.convention.quoted_literals]
# Consistent usage of preferred quotes for quoted literals
preferred_quoted_literal_style = "single_quotes"

[tool.sqlfluff.rules.convention.casting_style]
# SQL type casting
preferred_type_casting_style = "shorthand"

# --- sqlfmt Configuration ---
[tool.sqlfmt]
line_length = 88
exclude = ["target/**/*", "dbt_packages/**/*"]
